# nostr-wallet-connect-lnd

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker.yml
src/: config.rs  main.rs  nip47.rs  nwc.rs  payments.rs
