[package]
name = "nostr-wallet-connect-lnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.14", features = ["derive"] }
home = "0.5.4"
bitcoin = "0.29.2"
lightning-invoice = { version = "0.23.0", features = ["serde"] }
nostr = "0.22.0-bitcoin-v0.29"
nostr-sdk = "0.22.0-bitcoin-v0.29"
tonic_openssl_lnd = "0.2.0"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.11"
serde = "1.0"
serde_json = "1.0"
