[package]
name = "nostr-wallet-connect-lnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.14", features = ["derive"] }
home = "0.5.4"
bitcoin = "0.30.2"
lightning-invoice = { version = "0.29.0", features = ["serde"] }
nostr = { version = "0.29.0", features = ["nip47"] }
nostr-sdk = { version = "0.29.0", features = ["nip47"] }
tonic_openssl_lnd = "0.2.0"
tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.11"
serde = "1.0"
serde_json = "1.0"
url = { version = "2", features = ["serde"] }
hex = "0.4.3"
log = "0.4.20"
pretty_env_logger = "0.5.0"
async-lock = "3.3.0"
